--- a/style.css
+++ b/style.css
@@ -557,6 +557,7 @@ body {
 .location img{
   margin-top: 30px;
   margin-left: 75px;
+  margin-bottom: 112px;
 }
 .adressnumber{
   margin-top: 30px;
@@ -611,6 +612,8 @@ body {
 /*-------------------------- footer ---------------------*/
 .logo-2 {
   padding-top: 30px;
+  margin-left: 75px;
+  padding-bottom: 87px;
   align-items: center;
 }
 .logo-2 > p {
@@ -622,7 +625,6 @@ body {
   color: var(--menu-color);
 }
 footer{
-  margin-top: 112px;
   padding-left: 75px;
   width: 100%;
   height: 168px;
